--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
     <!-- custom css file link -->
-    <link rel="stylesheet" href="file:///E:/Web%20Design%202024%20SEM%206/Handbags%20style.css">
+    <link rel="stylesheet" href="css/Handbags style.css">
 
 </head>
 <body>
